@@ -1,4 +1,4 @@
-$Id: NEWS,v 1.953 2008-11-15 02:01:10 castaglia Exp $
+$Id: NEWS,v 1.954 2008-11-16 20:35:05 castaglia Exp $
 
 -----------------------------------------------------------------------------
   More details on the bugs listed below can be found by using the bug number
@@ -28,6 +28,7 @@ CVS
 - Bug 3130 - HideFiles can cause segfault.
 - Bug 3131 - Session process uses 100% CPU after aborted transfer.
 - Bug 3132 - Handling of SIGABRT signal leads to endless loop.
+- Bug 3073 - Command arguments not decoded properly in some places.
 
 1.3.2rc2 - Released 17-Sep-2008
 --------------------------------
